fix glossary pics on firefox

--- a/app/components/Article/article.css
+++ b/app/components/Article/article.css
@@ -147,7 +147,7 @@ article .definition {
   margin-bottom: var(--spacing-32);
 }
 article .link-popup .glossary-popup > img {
-  width: 100%;
+  /* width: 100%; */
   border-top-right-radius: var(--border-radius);
   border-bottom-right-radius: var(--border-radius);
 }
@@ -205,10 +205,10 @@ article .banner h3 .title {
   gap: var(--spacing-12);
 }
 
-@media (min-width: 780px) {
+@media (min-width: 1136px) {
   article .link-popup {
     position: absolute;
-    max-width: 400px;
+    max-width: 480px;
     display: inline-block;
     z-index: 2;
     left: calc(50% - 200px);
@@ -219,7 +219,7 @@ article .banner h3 .title {
   }
 }
 
-@media only screen and (max-width: 780px) {
+@media only screen and (max-width: 1136px) {
   article {
     max-width: 100%;
     padding: 0;
